# CardFramework

./: CMakeLists.txt  README.md
assets/: CMakeLists.txt
shaders/: CMakeLists.txt
source/: CFAction.cpp  CFBackground.cpp  CFCard.cpp  CFDeck.cpp  CFFlipAnimation.cpp  CFGameMode.cpp  CFGameState.cpp  CFPilable.cpp  CFPile.cpp  CMakeLists.txt
source/include/: CFAction.h  CFBackground.h  CFCard.h  CFDeck.h  CFFlipAnimation.h  CFGameMode.h  CFGameState.h  CFPilable.h  CFPile.h
